fixes minor spacing iussue with program selector in navbar

--- a/static/scss/navbar.scss
+++ b/static/scss/navbar.scss
@@ -265,6 +265,8 @@
 
   .Select-placeholder {
     font-weight: 300;
+    top: 0;
+    padding-left: 10px;
   }
 }
 
